--- a/index.html
+++ b/index.html
@@ -37,18 +37,17 @@
     </style>
 </head>
 <body>
-
     <header>
-        <script type="text/javascript">
-            atOptions = {
-                'key' : 'e3390cf0a8cdf953ded85bdaaf3046a5',
-                'format' : 'iframe',
-                'height' : 250,
-                'width' : 300,
-                'params' : {}
-            };
+        <script>
+          atOptions = {
+            'key' : 'e3390cf0a8cdf953ded85bdaaf3046a5',
+            'format' : 'iframe',
+            'height' : 250,
+            'width' : 300,
+            'params' : {}
+          };
         </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/e3390cf0a8cdf953ded85bdaaf3046a5/invoke.js"></script>
+        <script src="https://braceslinear.com/e3390cf0a8cdf953ded85bdaaf3046a5/invoke.js"></script>
     </header>
 
     <div class="video-container">
@@ -103,3 +102,4 @@ hs.src = ('//s10.histats.com/js15_as.js');
 
 </body>
 </html>
+
